...
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:animateLayoutChanges="true"
            android:paddingBottom="@dimen/margin_general">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{item.title}"
                android:gravity="center"
                android:textColor="@color/text_dark"
                android:textSize="@dimen/text_size_large"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title 1" />

            <TextView
                android:id="@+id/body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_general"
                android:text="@{item.body}"
                android:textColor="@color/text_dark"
                app:layout_constraintEnd_toEndOf="parent"
...
