...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/nameTV"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:background="@drawable/loading_placeholder"
                android:layout_marginEnd="@dimen/margin_large"
                app:layout_constraintEnd_toStartOf="@+id/closeIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/closeIcon"
                android:layout_width="24dp"
...
